@@ -1,15 +1,30 @@
 package org.opencds.cqf.fhir.cr.plandefinition.apply;
 
 import static java.util.Objects.requireNonNull;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.opencds.cqf.fhir.cr.common.ExtensionBuilders.buildReference;
-import static org.opencds.cqf.fhir.utility.SearchHelper.searchRepositoryByCanonical;
+import static org.opencds.cqf.fhir.utility.BundleHelper.addEntry;
+import static org.opencds.cqf.fhir.utility.BundleHelper.getEntryResources;
+import static org.opencds.cqf.fhir.utility.BundleHelper.newBundle;
+import static org.opencds.cqf.fhir.utility.BundleHelper.newEntry;
+import static org.opencds.cqf.fhir.utility.BundleHelper.newRequest;
+import static org.opencds.cqf.fhir.utility.BundleHelper.setEntryRequest;
+import static org.opencds.cqf.fhir.utility.Canonicals.getResourceType;
+import static org.opencds.cqf.fhir.utility.Canonicals.getUrl;
+import static org.opencds.cqf.fhir.utility.Canonicals.getVersion;
+import static org.opencds.cqf.fhir.utility.SearchHelper.getBundleClass;
+import static org.opencds.cqf.fhir.utility.SearchHelper.getResourceClass;
+import static org.opencds.cqf.fhir.utility.search.Searches.byUrl;
+import static org.opencds.cqf.fhir.utility.search.Searches.byUrlAndVersion;
 
+import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.repository.IRepository;
-import org.hl7.fhir.exceptions.FHIRException;
+import java.util.ArrayList;
+import java.util.List;
 import org.hl7.fhir.instance.model.api.IBase;
+import org.hl7.fhir.instance.model.api.IBaseBundle;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
-import org.hl7.fhir.r5.model.Enumerations.FHIRTypes;
 import org.opencds.cqf.fhir.utility.Ids;
 import org.opencds.cqf.fhir.utility.adapter.IPlanDefinitionActionAdapter;
 import org.opencds.cqf.fhir.utility.adapter.IRequestActionAdapter;
@@ -20,6 +35,13 @@ import org.slf4j.LoggerFactory;
 @SuppressWarnings("UnstableApiUsage")
 public class ProcessDefinition {
     private static final Logger logger = LoggerFactory.getLogger(ProcessDefinition.class);
+    private static final List<String> SUPPORTED_DEFINITION_TYPES = List.of(
+            "Questionnaire",
+            "ActivityDefinition",
+            "PlanDefinition",
+            "MessageDefinition",
+            "ObservationDefinition",
+            "SpecimenDefinition");
 
     final IRepository repository;
     final ApplyProcessor applyProcessor;
@@ -73,13 +95,93 @@ public class ProcessDefinition {
         requireNonNull(definition);
         logger.debug("Resolving definition {}", definition.getValue());
 
-        var resourceName = resolveResourceName(request, definition);
-        return switch (FHIRTypes.fromCode(requireNonNull(resourceName))) {
-            case PLANDEFINITION -> applyNestedPlanDefinition(request, definition);
-            case ACTIVITYDEFINITION -> applyActivityDefinition(request, definition);
-            case QUESTIONNAIRE -> applyQuestionnaireDefinition(request, definition);
-            default -> throw new FHIRException("Unknown action definition: %s".formatted(definition.getValue()));
+        var referenceToContained = definition.getValue().startsWith("#");
+        var resource = referenceToContained
+                ? resolveContained(request, definition.getValue())
+                : resolveCanonicalByType(request, definition);
+        if (resource == null) {
+            request.logException(
+                    String.format("Unable to find resource for definition: %s", definition.getValueAsString()));
+            return null;
+        }
+        return switch (resource.fhirType()) {
+            case "PlanDefinition" -> applyNestedPlanDefinition(request, resource);
+            case "ActivityDefinition" -> applyActivityDefinition(request, resource);
+            default -> applyDefinition(request, resource);
         };
+    }
+
+    /**
+     * Resolves a canonical reference by first attempting to determine the Resource type.  If able
+     * a search against only that type will be issued.  Otherwise, a single transaction Bundle
+     * will be issued that searches every supported definition resource type in parallel.
+     *
+     * <p>Resolution rules:
+     * <ul>
+     *   <li>If exactly one resource matches (with or without version) — return it.</li>
+     *   <li>If no resources match — return null.</li>
+     *   <li>If multiple resources match — throw an {@link IllegalStateException}.</li>
+     * </ul>
+     */
+    protected IBaseResource resolveCanonicalByType(ApplyRequest request, IPrimitiveType<String> definition) {
+        var canonical = definition.getValue();
+        var url = getUrl(canonical);
+        var version = getVersion(canonical);
+        var type = getResourceType(definition);
+        IBaseBundle response = null;
+        try {
+            response = type == null || !SUPPORTED_DEFINITION_TYPES.contains(type)
+                    ? searchAllDefinitionTypes(request.getFhirVersion(), url, version)
+                    : searchByCanonicalType(type, url, version);
+        } catch (Exception e) {
+            var message = "Error encountered searching for definition (%s): %s".formatted(canonical, e.getMessage());
+            logger.debug(message);
+            request.logException(message);
+        }
+        var matches = collectMatchesFromResponse(response);
+        if (matches.isEmpty()) {
+            return null;
+        }
+        if (matches.size() == 1) {
+            return matches.get(0);
+        }
+        var errorHint = isNotBlank(version)
+                ? "Even with the specified version, multiple resources matched."
+                : "Specify a version to resolve the ambiguity.";
+        throw new IllegalStateException(
+                "Multiple resources (%d) found for canonical '%s'. %s".formatted(matches.size(), canonical, errorHint));
+    }
+
+    protected IBaseBundle searchAllDefinitionTypes(FhirVersionEnum fhirVersion, String url, String version) {
+        var searchQuery = isNotBlank(version) ? "?url=%s&version=%s".formatted(url, version) : "?url=%s".formatted(url);
+        var transaction = newBundle(fhirVersion, "transaction");
+        for (var type : SUPPORTED_DEFINITION_TYPES) {
+            var searchUrl = "%s%s".formatted(type, searchQuery);
+            var requestEntry = newRequest(fhirVersion, "GET", searchUrl);
+            var entry = setEntryRequest(fhirVersion, newEntry(fhirVersion), requestEntry);
+            addEntry(transaction, entry);
+        }
+
+        return repository.transaction(transaction);
+    }
+
+    protected IBaseBundle searchByCanonicalType(String type, String url, String version) {
+        var searchParams = isNotBlank(version) ? byUrlAndVersion(url, version) : byUrl(url);
+        return repository.search(getBundleClass(repository), getResourceClass(repository, type), searchParams);
+    }
+
+    protected List<IBaseResource> collectMatchesFromResponse(IBaseBundle response) {
+        var matches = new ArrayList<IBaseResource>();
+        if (response != null) {
+            for (var resource : getEntryResources(response)) {
+                if (resource instanceof IBaseBundle resultBundle) {
+                    matches.addAll(getEntryResources(resultBundle));
+                } else {
+                    matches.add(resource);
+                }
+            }
+        }
+        return matches;
     }
 
     protected Boolean isDefinitionCanonical(ApplyRequest request, IBase definition) {
@@ -100,35 +202,16 @@ public class ProcessDefinition {
         };
     }
 
-    protected IBaseResource applyQuestionnaireDefinition(ApplyRequest request, IPrimitiveType<String> definition) {
-        requireNonNull(definition);
-        IBaseResource result = null;
-        try {
-            var referenceToContained = definition.getValue().startsWith("#");
-            if (referenceToContained) {
-                result = resolveContained(request, definition.getValue());
-            } else {
-                result = resolveRepository(definition);
-            }
-        } catch (Exception e) {
-            var message = "ERROR: Questionnaire %s could not be applied and threw exception %s"
-                    .formatted(definition.getValue(), e.toString());
-            logger.error(message);
-            request.logException(message);
-        }
-        return result;
+    protected IBaseResource applyDefinition(ApplyRequest request, IBaseResource definition) {
+        // TODO: Should wrap this in a Task?
+        return definition;
     }
 
-    protected IBaseResource applyActivityDefinition(ApplyRequest request, IPrimitiveType<String> definition) {
-        requireNonNull(definition);
+    protected IBaseResource applyActivityDefinition(ApplyRequest request, IBaseResource activityDefinition) {
         // Running into issues with invoking ActivityDefinition/$apply on a HapiFhirRepository that was created with
         // RequestDetails from PlanDefinition/$apply
         IBaseResource result = null;
         try {
-            var referenceToContained = definition.getValue().startsWith("#");
-            var activityDefinition = (referenceToContained
-                    ? resolveContained(request, definition.getValue())
-                    : resolveRepository(definition));
             var activityRequest = request.toActivityRequest(activityDefinition);
             result = applyProcessor.applyActivityDefinition(activityRequest);
             // appending a count to the id when an ActivityDefinition is used in multiple actions
@@ -146,21 +229,16 @@ public class ProcessDefinition {
             activityRequest.resolveOperationOutcome(request.getAdapterFactory().createResource(result));
         } catch (Exception e) {
             var message = "ERROR: ActivityDefinition %s could not be applied and threw exception %s"
-                    .formatted(definition.getValue(), e.toString());
+                    .formatted(activityDefinition.getIdElement().getValue(), e.toString());
             logger.error(message);
             request.logException(message);
         }
         return result;
     }
 
-    protected IBaseResource applyNestedPlanDefinition(ApplyRequest request, IPrimitiveType<String> definition) {
-        requireNonNull(definition);
+    protected IBaseResource applyNestedPlanDefinition(ApplyRequest request, IBaseResource planDefinition) {
         try {
-            var referenceToContained = definition.getValue().startsWith("#");
-            var nextPlanDefinition = (referenceToContained
-                    ? resolveContained(request, definition.getValue())
-                    : resolveRepository(definition));
-            var nestedRequest = request.copy(nextPlanDefinition);
+            var nestedRequest = request.copy(planDefinition);
             var result = applyProcessor.applyPlanDefinition(nestedRequest);
             nestedRequest.resolveOperationOutcome(request.getAdapterFactory().createResource(result));
             request.getRequestResources().addAll(nestedRequest.getRequestResources());
@@ -169,30 +247,11 @@ public class ProcessDefinition {
             return result;
         } catch (Exception e) {
             var message = "ERROR: PlanDefinition %s could not be applied and threw exception %s"
-                    .formatted(definition.getValue(), e.toString());
+                    .formatted(planDefinition.getIdElement().getValue(), e.toString());
             logger.error(message);
             request.logException(message);
             return null;
         }
-    }
-
-    protected IBaseResource resolveRepository(IPrimitiveType<String> definition) {
-        return searchRepositoryByCanonical(repository, definition);
-    }
-
-    protected String resolveResourceName(ApplyRequest request, IPrimitiveType<String> canonical) {
-        requireNonNull(canonical);
-        if (canonical.hasValue()) {
-            var id = canonical.getValue();
-            if (id.contains("/")) {
-                id = id.replace(id.substring(id.lastIndexOf("/")), "");
-                return id.contains("/") ? id.substring(id.lastIndexOf("/") + 1) : id;
-            } else if (id.startsWith("#")) {
-                return resolveContained(request, id).fhirType();
-            }
-            return null;
-        }
-        throw new FHIRException("CanonicalType must have a value for resource name extraction");
     }
 
     protected IBaseResource resolveContained(ApplyRequest request, String id) {
